added hero image

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -36,3 +36,13 @@
         border-bottom-right-radius: var(--rounded-btn, 0.5rem);
     }
 }
+
+.btn-instagram {
+    color: white;
+    background-image: linear-gradient(
+        72.44deg,
+        #ff7a00 11.92%,
+        #ff0169 51.56%,
+        #d300c5 85.69%
+    );
+}
