--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -51,3 +51,21 @@
     min-height: calc(100vh - 4rem);
     min-height: 100svh;
 }
+
+@keyframes bounce {
+    0%, 100% {
+        transform: none;
+        animation-timing-function: cubic-bezier(0.8,0,1,1);
+    }
+    25% {
+        transform: translateY(-25%);
+        animation-timing-function: cubic-bezier(0,0,0.2,1);
+    }
+    70% {
+        transform: translateY(10%);
+        animation-timing-function: cubic-bezier(0.8,0,1,1);
+    }
+}
+.animate-bounce-once {
+    animation: bounce alternate 1s 1;
+}
