--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -52,20 +52,15 @@
     min-height: 100svh;
 }
 
-@keyframes bounce {
+@keyframes ping {
     0%, 100% {
-        transform: none;
-        animation-timing-function: cubic-bezier(0.8,0,1,1);
+        @apply btn-ghost;
     }
-    25% {
-        transform: translateY(-25%);
-        animation-timing-function: cubic-bezier(0,0,0.2,1);
-    }
-    70% {
-        transform: translateY(10%);
-        animation-timing-function: cubic-bezier(0.8,0,1,1);
+    50% {
+        @apply btn-accent;
+        transform: scale(1.5);
     }
 }
-.animate-bounce-once {
-    animation: bounce alternate 1s 1;
+.animate-ping-once {
+    animation: ping 0.6s ease-in-out 1;
 }
