--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -64,3 +64,7 @@
 .animate-ping-once {
     animation: ping 0.6s ease-in-out 1;
 }
+
+.border-between-rows:not(:last-child) {
+    @apply border-b-2;
+}
